--- a/contact.html
+++ b/contact.html
@@ -39,23 +39,24 @@
 
                     <ul class="info">
                         <li>
-                            <span><img src="/Imagens/Icones/gps.png"></span>
+                            <span><img src="./images/gps.png"></span>
                             <span>Location: Caruaru-PE, Brazil</span>
                         </li>
                         <li>
-                            <span><img src="/Imagens/Icones/mail.svg"></span>
+                            <span><img src="./images/mail.png"></span>
                             <span>vinicius.emanuel2525@gmail.com</span>
                         </li>
                         <li>
-                            <span><img src="/Imagens/Icones/phone-receiver.svg"></span>
+                            <span><img src="./images/phone-receiver.png"></span>
                             <span>Phone: (81) 9.0000-0000</span>
                         </li>
                     </ul>
 
                     <ul class="contact-links">
-                        <li><a href="#"><img src="/Imagens/Icones/git2.png"></a></li>
-                        <li><a href="#"><img src="/Imagens/Icones/linkedin.png"></a></li>
-                        <li><a href="#"><img src="/Imagens/Icones/instagram-logo.png"></a></li>
+                        <li><a href="#"><img src="./images/github.png"></a></li>
+                        <li><a href="#"><img src="./images/instagram.png"></a></li>
+                        <li><a href="#"><img src="./images/linkedin.png"></a></li>
+                        <li><a href="#"><img src="./images/medium.png"></a></li>
                     </ul>
                 </div>
                 
