new color theme and incremental motion

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
         <!-- ABOUT SECTION -->
         <main data-barba="container" data-barba-namespace="about">
-            <div class="container">
+            <div class="container" id="container-flex">
                 
                 <div class="contact">
                     <h5>Informações de Contacto</h5>
