fixing minor errors

--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,7 @@
             <a href = "#" class = "logo">Portfólio</a>
             <div class = "menu""></div>
             <ul>
-                <li><a href = "index.html">Home</a></li>
+                <li><a href = "https://vinicius-25.github.io/portfolio-page/">Home</a></li>
                 <li><a href = "about.html">Sobre</a></li>
                 <li><a href = "time-line.html">Linha do Tempo</a></li>
                 <li><a href = "skills.html">Habilidades</a></li>
@@ -30,19 +30,19 @@
             </ul>
         </header>
 
-        <!-- TIME LINE SECTION -->
+        <!-- SKILLS SECTION -->
         <main data-barba="container" data-barba-namespace="skills">
             <div class="container">
                 <div class="container-skill">
                     <div class="skill">
-                        <div class = "celular" id ="celular01"></div>
-                        <div class = "celular" id ="celular02"></div>
-                        <div class = "celular" id ="celular03"></div>
-                        <div class = "celular" id ="celular04"></div>
-                        <div class = "celular" id ="celular05"></div>
-                        <div class = "celular" id ="celular06"></div>
-                        <div class = "celular" id ="celular07"></div>
-                        <div class = "celular" id ="celular08"></div>
+                        <div class = "celular" id ="celular01"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular02"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular03"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular04"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular05"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular06"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular07"><div class="celular-line"></div></div>
+                        <div class = "celular" id ="celular08"><div class="celular-line"></div></div>
                     </div>
                     <div id = "line-bar">
                         <div id = "line-experience"> </div>
@@ -60,6 +60,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js" integrity="sha256-fIkQKQryItPqpaWZbtwG25Jp2p5ujqo/NwJrfqAB+Qk=" crossorigin="anonymous"></script>
 
+        <!-- parallax with ScrollTrigger -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+
         <!-- to use barba -->
         <script src="https://unpkg.com/@barba/core"></script>
         <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
@@ -67,12 +72,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     
-        <!-- Swiper JS -->
-        <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-        <script src="./package/js/swiper.min.js"></script>
+        <!-- to use textplugin -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/EasePack.min.js"></script>
 
         <script src="./skills.js"></script>
-
         <script src="./newjava.js"></script>
 
     </body>
