--- a/about.html
+++ b/about.html
@@ -35,12 +35,8 @@
             <div class="container">
                 <div class = "about">
                     <h2>Quem sou</h2>
-                    <h3 class="text"> </h3>
-                    <!--<a href ="#" class = "button">Read Here</a>-->
+                    <h3 class="text"></h3>
                     <div class="image"></div>
-                    <div id="about-next">
-                        <a href = "time-line.html"><div class="next-button"></div></a>
-                    </div>
                 </div>
             </div>
         </main>
@@ -71,5 +67,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/TextPlugin.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/EasePack.min.js"></script>
 
+        <script src="./about.js"></script>
+        <script src="./newjava.js"></script>
     </body>
 </html>
