--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href = "#" class = "logo">Portfólio</a>
             <div class = "menu""></div>
             <ul>
-                <li><a href = "https://vinicius-25.github.io/portfolio-page/">Home</a></li>
+                <li><a href = "index.html">Home</a></li>
                 <li><a href = "about.html">Sobre</a></li>
                 <li><a href = "time-line.html">Linha do Tempo</a></li>
                 <li><a href = "skills.html">Habilidades</a></li>
@@ -39,10 +39,9 @@
                     <div class="above">
                         <div class="content">
                             <h2>
-                            Olá! Eu sou<br> <!--quebra de linha-->
+                            Olá! Eu sou<br>
                             <span class="letters" id="flip">Vinícius Emanuel</span> <!--elemento de linha, mantem junto-->
                             </h2>
-                            
                             <h3 class="text">
                             . 
                             </h3>  <!--paragrafo-->
@@ -58,8 +57,15 @@
                         <div class="box-lineleft-first"></div>
                     </div>
                     <div class="content-left-first">
-                        <h3> Me aventurei em pesquisa acadêmica no início da faculdade<br>
-                        Descobri as regras ABNT e desenvolvi alguns artigos.</h3>
+                        <h3>
+                            Iniciei meus estudos no ano de 2015,<br>
+                            minha área de escolha era engenharia,<br>
+                            mas não sabia bem qual caminho seguir<br><br>
+                            Passei em Engenharia de Produção,<br>
+                            sem muito saber sobre sua atuação<br><br>
+                            Mesmo assim ingressei com a mente<br>
+                            aberta para novas possibilidades
+                    </h3>
                     </div>
 
                     <div class="img-right-second">
@@ -67,8 +73,13 @@
                         <div class="box-lineright-second"></div>
                     </div>
                     <div class="content-right-second">
-                        <h3> Me aventurei em pesquisa acadêmica no início da faculdade<br>
-                        Descobri as regras ABNT e desenvolvi alguns artigos.</h3>
+                        <h3>
+                            Em meio aos desafios da faculdade,<br>
+                            me aventurei na pesquisa acadêmica<br><br>
+                            Descobri as regras ABNT e desenvolvi<br>
+                            alguns artigos, aplicando conhecimentos<br>
+                            em gestão de projetos
+                        </h3>
                     </div>
 
                     <div class="img-left-third">
@@ -76,8 +87,12 @@
                         <div class="box-lineleft-third"></div>
                     </div>
                     <div class="content-left-third">
-                        <h3> Me aventurei em pesquisa acadêmica no início da faculdade<br>
-                        Descobri as regras ABNT e desenvolvi alguns artigos.</h3>
+                        <h3>
+                            No ano 2017, membro do grupo GAMA,<br>
+                            assumi a responsabilidade de realizar<br>
+                            um evento aberto com duração de 5 dias,<br>
+                            sobre gestão ambiental e aberto para todos
+                        </h3>
                     </div>
 
                     <div class="img-right-fourth">
@@ -85,14 +100,80 @@
                         <div class="box-lineright-fourth"></div>
                     </div>
                     <div class="content-right-fourth">
-                        <h3> Me aventurei em pesquisa acadêmica no início da faculdade<br>
-                        Descobri as regras ABNT e desenvolvi alguns artigos.</h3>
+                        <h3>
+                            Através de muitos desafios e<br>
+                            parcerias privadas e públicas<br><br>
+                            O evento foi realizado com sucesso<br>
+                            e atingiu mais de 200 pessoas<br><br>
+                            Com palestras, minicurso e<br>
+                            exposição no Marco Zero da cidade
+                        </h3>
+                    </div>
+
+                    <div class="img-left-fifth">
+                        <img src="./images/presentation1.jpg">
+                        <div class="box-lineleft-fifth"></div>
+                    </div>
+                    <div class="content-left-fifth">
+                        <h3>
+                            Em busca de uma experiência mais profissional<br>
+                            entrei na empresa júnior de meu curso<br><br>
+                            Tive uma nova visão de como funcionava<br>
+                            o mercado, em específico as dificuldades<br>
+                            das empresas de minha região
+                        </h3>
+                    </div>
+
+                    <div class="img-right-sixth">
+                        <img src="./images/presentation2.png">
+                        <div class="box-lineright-sixth"></div>
+                    </div>
+                    <div class="content-right-sixth">
+                        <h3>
+                            No ano de 2019, em acordo com a<br>
+                            Secretaria de Serviços Públicos,<br>
+                            realizei um projeto com bolsa<br><br>
+
+                            Com objetivo de georreferenciar<br>
+                            todo o municipio
+                        </h3>
+                    </div>
+
+                    <div class="img-left-seventh">
+                        <img src="./images/presentation1.jpg">
+                        <div class="box-lineleft-seventh"></div>
+                    </div>
+                    <div class="content-left-seventh">
+                        <h3>
+                            Procurando me aperfeiçoar,conheci mais<br>
+                            sobre a área de desenvolvimento web,<br>
+                            a qual sempre tive curiosidade<br><br>
+                            Também mergulhei em alguns cursos<br>
+                            de programação e Business Inteligence
+                        </h3>
+                    </div>
+
+                    <!-- NEXT BLOCK, FOR MORE IT'S NEED TO INCREASE THIS SECTION IN CSS AND NEW JAVA.JS (IN VIEWS -> namespace: 'home')
+                    <div class="img-right-eighth">
+                        <img src="./images/presentation2.png">
+                        <div class="box-lineright-eighth"></div>
+                    </div>
+                    <div class="content-right-eighth">
+                        <h3>
+                            Ciência de Dados
+                        </h3>
                     </div>
 
                     <div id="home-next">
                         <a href = "about.html"><div class="next-button"></div></a>
-                    </div>                    
+                    </div>
+                    -->        
                 </div>
+                <!-- BUTTON TO NEXT PAGE 
+                <div id="about-next">
+                    <a href = "time-line.html"><div class="next-button"></div></a>
+                </div>
+                -->
                 <footer>
                     <h3>Desenvolvido por: Vinícius Emanuel Moura Santos</h3>
                 </footer>
