--- a/portfolio.html
+++ b/portfolio.html
@@ -36,70 +36,67 @@
         <main data-barba="container" data-barba-namespace="portfolio">
             <div class="container">
                 <div id="portfolio">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class = "card">
-                                <div class="sliderText">
-                                    <img src = "./images/Capa.png">
-                                    <div class = "overlay">
-                                        <span class = "plus"><h4>+</h4></span>
-                                        <h4>Em Breve</h4>
-                                    </div>
-                                </div>
-                                <div class="sliderBox">
-                                    <p>Imapctos e Consequencias de informações em uma empresa de transporte</p>
-                                </div>
-                            </div> 
+                    <div class="wrapper">
+                        <div class="tittle">
+                            <h2>Artigos</h2>
                         </div>
+                        <div class="boxes">
+                            <div class="grid">
+                                <div class="box box-left-first">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-lineleft"></div>
+                                </div>
+                                <div class="box box-center-first">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-linecenter"></div>
+                                </div>
+                                <div class="box box-right-first">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-lineright"></div>
+                                </div>
 
-                        <div class="swiper-slide">
-                            <div class = "card">
-                                <div class="sliderText">
-                                    <img src = "./images/tela-bi.png">
-                                    <div class = "overlay">
-                                        <span class = "plus"><h4>+</h4></span>
-                                        <h4>Em Breve</h4>
-                                    </div>
+                                <div class="box-contentleft">
+                                    <h3>Texto Texto</h3>
                                 </div>
-                                <div class="sliderBox">
-                                    <p>Dashboard para Gestão de Frotas</p>
+                                <div class="box-contentcenter">
+                                    <h3>Texto Texto</h3>
                                 </div>
-                            </div> 
+                                <div class="box-contentright">
+                                    <h3>Texto Texto</h3>
+                                </div>
+                            </div>
+                            <div class="grid">
+                                <div class="box box-left-second">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-lineleft"></div>
+                                </div>
+                                <div class="box box-center-second">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-linecenter"></div>
+                                </div>
+                                <div class="box box-right-second">
+                                    <img src="./images/presentation2.png">
+                                    <div class="box-lineright"></div>
+                                </div>
+                            </div>
+                            <div class="grid">
+                                <div class="box box-left-third"></div>
+                                <div class="box box-center-third"></div>
+                                <div class="box box-right-third"></div>
+                            </div>
+                            
+                            <div class="grid">
+                                <div class="box box-left-fourth"></div>
+                                <div class="box box-center-fourth"></div>
+                                <div class="box box-right-fourth"></div>
+                            </div>
+                            <div class="grid">
+                                <div class="box box-left-fifith"></div>
+                                <div class="box box-center-fifith"></div>
+                                <div class="box box-right-fifith"></div>
+                            </div>
                         </div>
-
-                        <div class="swiper-slide">
-                            <div class = "card">
-                                <div class="sliderText">
-                                    <img src = "./images/map1.png">
-                                    <div class = "overlay">
-                                        <span class = "plus"><h4>+</h4></span>
-                                        <h4>Em Breve</h4>
-                                    </div>
-                                </div>
-                                <div class="sliderBox">
-                                    <p>Georreferenciamento Intermunicipal</p>
-                                </div>
-                            </div> 
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class = "card">
-                                <div class="sliderText">
-                                    <img src = "./images/map1.png">
-                                    <div class = "overlay">
-                                        <span class = "plus"><h4>+</h4></span>
-                                        <h4>Em Breve</h4>
-                                    </div>
-                                </div>
-                                <div class="sliderBox">
-                                    <p>Blashas asdknacaj ASDJN</p>
-                                </div>
-                            </div> 
-                        </div>
-
                     </div>
-                </div>
                 </div>
             </div>
         </main>
