--- a/time-line.html
+++ b/time-line.html
@@ -49,23 +49,33 @@
     
                 <div id = "progress-content">
                     <div class = "section formacao">
-                        <h2>First Presentation</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum.<br><strong>Start Point: X0x0</strong></p>
+                        <h2>Universidade Federal de Pernambuco</h2>
+                        <p><strong>Engenharia de Produção</strong><br><u>2015 - atual</u><br>
+                        A UFPE é uma faculdade pública do estado de Pernambuco<br>e possui campus em Recife, Vitória e Caruaru.<br><br>
+                        O curso de engenharia de produção possui uma ampla área de atuaação e está<br>presente na implantação, operação, melhoria e manutenção de sistemas produtivos<br>integrados de bens ou serviços. Alguns exemplos de especialização são:<br>Logistica, Qualidade, Econômica, Pesquisa Operacional...</p>
                     </div>
                     <div class = "section gama">
-                        <h2>Second Presentation</h2>
-                        <p>time/2010 - today<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
+                        <h2>Grupo de Gestão Ambiental Avançada</h2>
+                        <p><u>ago/2017 - o momento</u><br>
+                        Este é um grupo de pesquisa e extensão da faculdade.<br>
+                        Ssou voluntário no projeto Amigos do Meio Ambiente, o qual leva educação<br>
+                        e gestão ambiental para escolas do município de Caruaru.<br><br>
+                        Participei da formação da comissão da A3P implementada no CAA<br>e também, através do GAMA, participei de projeto em parceria com<br>a secretaria de Serviços Públicos de Caruaru para georreferenciar e mapear<br>rotas de varrição e coleta da cidade<br></p>
                     </div>
                     <div class = "section ciclo">
-                        <h2>Third Presentation</h2>
-                        <p><strong>TITLE 1</strong><br>Time/2018 - timeo/2020<br>
-                        </strong:>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condi. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci..</p>
-                        <p><strong>TITLE 2</strong><br>Ttime/2015 - time/2018<br>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
+                        <h2>Ciclo Consultoria</h2>
+                        <p><strong>Assessor de Negócios</strong><br><u>jan/2019 - jun/2019</u><br>
+                        Atuei na prospecção de clientes, elaboração de diagnósticos e desenvolvimento<br>de propostas com soluções nas áreas de gestão da produção, processos, qualidade,<br>financeiro ou logística, conforme necessidade do cliente</p>
+                        <p><strong><br>Coordenador de Qualidade e Desenvolvimento</strong><br><u>ago/2018 - dez/2018</u><br>
+                        Fiquei responsável por medir o NPS, monitorar a satisfação dos clientes<br>e acompanhar o desempenho da qualidade dos projetos em andamento</p>
                     </div>
                     <div class = "section secretaria">
-                        <h2>Fourth Presentation</h2>
-                        <p>time/2019 - today<br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec neque justo, consequat non fermentum ac, tempor eu turpis. Proin nulla eros, placerat non ipsum ut, dapibus ullamcorper ex. Nulla in dapibus lorem. Suspendisse vitae velit ac ante consequat placerat ut sed eros. Nullam porttitor mattis mi, id fringilla ex consequat eu. Praesent pulvinar tincidunt leo et condimentum. Maecenas volutpat turpis at felis egestas malesuada. Phasellus sem odio, venenatis at ex a, lacinia suscipit orci.</p>
+                        <h2>Bolsista na Secretaria de Serviços Públicos</h2>
+                        <p><u>mai/2019 - mai/2020</u><br>
+                        Realizei o mapeamento e georreferenciamento da cidade Caruaru,<br>
+                        como medida de atualização e apoio nos projetos<br>
+                        de varrição e coleta de resíduos.<br>
+                        Os resultados possibilitam otimização de rotas,<br>minimização de custos e formação de banco de dados</p>
                     </div>
                 </div>
 
