--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,12 @@
             <div class="container" id="container-flex">
                 
                 <div class="contact">
-                    <h5>Informações de Contacto</h5>
+                    <h5>Informações de Contato</h5>
 
                     <ul class="info">
                         <li>
                             <span><img src="./images/gps.png"></span>
-                            <span>Location: Caruaru-PE, Brazil</span>
+                            <span>Caruaru-PE, Brazil</span>
                         </li>
                         <li>
                             <span><img src="./images/mail.png"></span>
@@ -48,7 +48,7 @@
                         </li>
                         <li>
                             <span><img src="./images/phone-receiver.png"></span>
-                            <span>Phone: (81) 9.0000-0000</span>
+                            <span>(81) 9.0000-0000</span>
                         </li>
                     </ul>
 
