--- a/contact.html
+++ b/contact.html
@@ -39,24 +39,24 @@
 
                     <ul class="info">
                         <li>
-                            <span><img src="./images/gps.png"></span>
+                            <span><img src="./images/social-icon/gps.png"></span>
                             <span>Caruaru-PE, Brazil</span>
                         </li>
                         <li>
-                            <span><img src="./images/mail.png"></span>
+                            <span><img src="./images/social-icon/mail.png"></span>
                             <span>vinicius.emanuel2525@gmail.com</span>
                         </li>
                         <li>
-                            <span><img src="./images/phone-receiver.png"></span>
+                            <span><img src="./images/social-icon/phone-receiver.png"></span>
                             <span>(81) 9.0000-0000</span>
                         </li>
                     </ul>
 
                     <ul class="contact-links">
-                        <li><a href="#"><img src="./images/github.png"></a></li>
-                        <li><a href="#"><img src="./images/instagram.png"></a></li>
-                        <li><a href="#"><img src="./images/linkedin.png"></a></li>
-                        <li><a href="#"><img src="./images/medium.png"></a></li>
+                        <li><a href="#"><img src="./images/social-icon/github.png"></a></li>
+                        <li><a href="#"><img src="./images/social-icon/instagram.png"></a></li>
+                        <li><a href="#"><img src="./images/social-icon/linkedin.png"></a></li>
+                        <li><a href="#"><img src="./images/social-icon/medium.png"></a></li>
                     </ul>
                 </div>
                 
