--- a/portfolio.html
+++ b/portfolio.html
@@ -43,58 +43,104 @@
                         <div class="boxes">
                             <div class="grid">
                                 <div class="box box-left-first">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/hello-world.png">
                                     <div class="box-lineleft"></div>
                                 </div>
                                 <div class="box box-center-first">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/cs50largestfinal.png">
                                     <div class="box-linecenter"></div>
                                 </div>
                                 <div class="box box-right-first">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/datawarehouse.jpg">
                                     <div class="box-lineright"></div>
                                 </div>
 
                                 <div class="box-contentleft">
-                                    <h3>Texto Texto</h3>
+                                    <h3>A origem está nos primórdios da linguagem C pelo autor Brian Kernighan em 1972 enquanto trabalhava na Bell Labs...</h3>
                                 </div>
                                 <div class="box-contentcenter">
-                                    <h3>Texto Texto</h3>
+                                    <h3>Um dos cursos mais singulares já vistos sem dúvida, até pessoas de fora da universidade que nunca possuíram relação com a área se inscrevem no curso...</h3>
                                 </div>
                                 <div class="box-contentright">
-                                    <h3>Texto Texto</h3>
+                                    <h3>A Big Data tão conhecida nada mais é que a geração massiva de dados e compilados em um banco de dados. Contudo, é ingenuidade trata-lo como simples armazenamento...</h3>
                                 </div>
                             </div>
+
                             <div class="grid">
                                 <div class="box box-left-second">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/controle-financeiros-de-projetos.jpg">
                                     <div class="box-lineleft"></div>
                                 </div>
                                 <div class="box box-center-second">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/tela-bi.png">
                                     <div class="box-linecenter"></div>
                                 </div>
                                 <div class="box box-right-second">
-                                    <img src="./images/presentation2.png">
+                                    <img src="./images/portfolio/Capa.png">
                                     <div class="box-lineright"></div>
                                 </div>
+
+                                <div class="box-contentleft">
+                                    <h3>De forma simplificada, muitas empresas lidam com fluxos de operações financeiras diárias, que envolve pagamentos, recebimentos e outras movimentações...</h3>
+                                </div>
+                                <div class="box-contentcenter">
+                                    <h3>Software poderoso, possui fácil navegação nos dados e faz boas apresentações visuais, além de ser facilmente integrado com outros softwares. Trabalha com vários conjuntos e quantidades...</h3>
+                                </div>
+                                <div class="box-contentright">
+                                    <h3>A manutenção, especialmente a preventiva, é essencial para o bom funcionamento dos veículos. Se for feita de forma adequada, há menos chances de haver necessidade de consertos.</h3>
+                                </div>
                             </div>
+
                             <div class="grid">
-                                <div class="box box-left-third"></div>
-                                <div class="box box-center-third"></div>
-                                <div class="box box-right-third"></div>
+                                <div class="box box-left-third">
+                                    <img src="./images/portfolio/hello-world.png">
+                                    <div class="box-lineleft"></div>
+                                </div>
+                                <div class="box box-center-third">
+                                    <img src="./images/portfolio/cs50largestfinal.png">
+                                    <div class="box-linecenter"></div>
+                                </div>
+                                <div class="box box-right-third">
+                                    <img src="./images/portfolio/datawarehouse.jpg">
+                                    <div class="box-lineright"></div>
+                                </div>
+
+                                <div class="box-contentleft">
+                                    <h3>A origem está nos primórdios da linguagem C pelo autor Brian Kernighan em 1972 enquanto trabalhava na Bell Labs...</h3>
+                                </div>
+                                <div class="box-contentcenter">
+                                    <h3>Um dos cursos mais singulares já vistos sem dúvida, até pessoas de fora da universidade que nunca possuíram relação com a área se inscrevem no curso...</h3>
+                                </div>
+                                <div class="box-contentright">
+                                    <h3>A Big Data tão conhecida nada mais é que a geração massiva de dados e compilados em um banco de dados. Contudo, é ingenuidade trata-lo como simples armazenamento...</h3>
+                                </div>
+                            </div>
+
+                            <div class="grid">
+                                <div class="box box-left-fourth">
+                                    <img src="./images/portfolio/controle-financeiros-de-projetos.jpg">
+                                    <div class="box-lineleft"></div>
+                                </div>
+                                <div class="box box-center-fourth">
+                                    <img src="./images/portfolio/tela-bi.png">
+                                    <div class="box-linecenter"></div>
+                                </div>
+                                <div class="box box-right-fourth">
+                                    <img src="./images/portfolio/Capa.png">
+                                    <div class="box-lineright"></div>
+                                </div>
+
+                                <div class="box-contentleft">
+                                    <h3>De forma simplificada, muitas empresas lidam com fluxos de operações financeiras diárias, que envolve pagamentos, recebimentos e outras movimentações...</h3>
+                                </div>
+                                <div class="box-contentcenter">
+                                    <h3>Software poderoso, possui fácil navegação nos dados e faz boas apresentações visuais, além de ser facilmente integrado com outros softwares. Trabalha com vários conjuntos e quantidades...</h3>
+                                </div>
+                                <div class="box-contentright">
+                                    <h3>A manutenção, especialmente a preventiva, é essencial para o bom funcionamento dos veículos. Se for feita de forma adequada, há menos chances de haver necessidade de consertos.</h3>
+                                </div>
                             </div>
                             
-                            <div class="grid">
-                                <div class="box box-left-fourth"></div>
-                                <div class="box box-center-fourth"></div>
-                                <div class="box box-right-fourth"></div>
-                            </div>
-                            <div class="grid">
-                                <div class="box box-left-fifith"></div>
-                                <div class="box box-center-fifith"></div>
-                                <div class="box box-right-fifith"></div>
-                            </div>
                         </div>
                     </div>
                 </div>
