--- a/time-line.html
+++ b/time-line.html
@@ -37,10 +37,10 @@
 
                 <div id ="progress-bar">
                     <ul>
-                        <li class = "step step01" rel = "one"><img src = "./images/ufpe.png"></li>
-                        <li class = "step step02" rel = "two"><img src = "./images/gama-n.png"></li>
-                        <li class = "step step03" rel = "three"><img src = "./images/ciclo.png"></li>
-                        <li class = "step step04" rel = "four"><img src = "./images/Brasao.png"></li>
+                        <li class = "step step01" rel = "one"><img src = "./images/time-line/ufpe.png"></li>
+                        <li class = "step step02" rel = "two"><img src = "./images/time-line/gama-n.png"></li>
+                        <li class = "step step03" rel = "three"><img src = "./images/time-line/ciclo.png"></li>
+                        <li class = "step step04" rel = "four"><img src = "./images/time-line/Brasao.png"></li>
                     </ul>
                     <div id = "line">
                         <div id = "line-progress"></div>
