--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="home-down">
                     <div class="img-left-first">
-                        <img src="./images/presentation1.jpg">
+                        <img src="./images/home/caa.png">
                         <div class="box-lineleft-first"></div>
                     </div>
                     <div class="content-left-first">
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="img-right-second">
-                        <img src="./images/presentation2.png">
+                        <img src="./images/home/artigo.png">
                         <div class="box-lineright-second"></div>
                     </div>
                     <div class="content-right-second">
@@ -83,7 +83,7 @@
                     </div>
 
                     <div class="img-left-third">
-                        <img src="./images/presentation1.jpg">
+                        <img src="./images/home/sma1.png">
                         <div class="box-lineleft-third"></div>
                     </div>
                     <div class="content-left-third">
@@ -96,7 +96,7 @@
                     </div>
 
                     <div class="img-right-fourth">
-                        <img src="./images/presentation2.png">
+                        <img src="./images/home/sma2.png">
                         <div class="box-lineright-fourth"></div>
                     </div>
                     <div class="content-right-fourth">
@@ -111,7 +111,7 @@
                     </div>
 
                     <div class="img-left-fifth">
-                        <img src="./images/presentation1.jpg">
+                        <img src="./images/home/ciclo1.png">
                         <div class="box-lineleft-fifth"></div>
                     </div>
                     <div class="content-left-fifth">
@@ -125,7 +125,7 @@
                     </div>
 
                     <div class="img-right-sixth">
-                        <img src="./images/presentation2.png">
+                        <img src="./images/home/secretaria.png">
                         <div class="box-lineright-sixth"></div>
                     </div>
                     <div class="content-right-sixth">
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="img-left-seventh">
-                        <img src="./images/presentation1.jpg">
+                        <img src="./images/home/code.png">
                         <div class="box-lineleft-seventh"></div>
                     </div>
                     <div class="content-left-seventh">
