--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             minha área de escolha era engenharia,<br>
                             mas não sabia bem qual caminho seguir<br><br>
                             Passei em Engenharia de Produção,<br>
-                            sem muito saber sobre sua atuação<br><br>
+                            sem muito saber sobre a atuação<br><br>
                             Mesmo assim ingressei com a mente<br>
                             aberta para novas possibilidades
                     </h3>
@@ -91,7 +91,7 @@
                             No ano 2017, membro do grupo GAMA,<br>
                             assumi a responsabilidade de realizar<br>
                             um evento aberto com duração de 5 dias,<br>
-                            sobre gestão ambiental e aberto para todos
+                            sobre gestão ambiental e aberto ao público
                         </h3>
                     </div>
 
@@ -132,8 +132,7 @@
                         <h3>
                             No ano de 2019, em acordo com a<br>
                             Secretaria de Serviços Públicos,<br>
-                            realizei um projeto com bolsa<br><br>
-
+                            participei de um projeto com bolsa<br><br>
                             Com objetivo de georreferenciar<br>
                             todo o municipio
                         </h3>
